# cfd-python

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  MANIFEST.in  Pipfile  README.md  cfd-python.code-workspace  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: check_pre-merge_develop.yml  check_pre-merge_master.yml  check_pre-merge_sprint.yml  code_scanner.yml  create_release-and-upload.yml
.github/workflows/docker/: test_bitcoin_entrypoint.sh  test_entrypoint.sh
cfd/: __init__.py  address.py  block.py  confidential_address.py  confidential_transaction.py  crypto.py  descriptor.py  hdwallet.py  key.py  psbt.py  script.py  taproot.py  transaction.py  util.py
doc/: Doxyfile  Doxyfile_graph  Doxyfile_private  Doxyfile_private_graph  Doxyfile_quiet_all  Doxyfile_quiet_all_ignore_error
integration_test/: Dockerfile  Pipfile  README.md  docker-compose.yml  test_entrypoint.sh
integration_test/tests/: helper.py  test_bitcoin.py  test_elements.py
local_resource/: external_project_local_setting.config
tests/: test_address.py  test_block.py  test_common.py  test_confidential_address.py  test_confidential_transaction.py  test_descriptor.py  test_elements.py  test_hdwallet.py  test_key.py  test_psbt.py  test_script.py  test_transaction.py  util.py
tests/data/: elements_coin_test.json  elements_transaction_test.json  key_test.json
tools/: build_and_test_for_docker.sh  build_for_docker.sh  cleanup.py  example.py  function_converter.py  version_checker.py
