[metadata]
name = cfd
version = file:VERSION
description = Crypto Finance Development Kit for Python
author = Crypto Garage
license = MIT
license-file = LICENSE
url = https://github.com/p2pderivatives/cfd-python
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = Bitcoin, cfd, libwally, secp256k1
project_urls =
    Source Code = https://github.com/p2pderivatives/cfd-python
    Bug Tracker = https://github.com/p2pderivatives/cfd-python/issues
requires-dist = setuptools
long-description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = cfd
include_package_data = True
package_dir =
    cfd=cfd

[options.package_data]
* = *.txt, *.rst

[bdist_wheel]
universal = 1
